--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           >
             <use href="/svg/floppy.svg"></use>
           </svg>
-          <p class="button__text">Сохранить на память</p>
+          <span class="button__text">Сохранить на память</span>
         </button>
       </div>
       <dialog class="dialog" id="dialog">
